--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,50 @@
 .sendForm {
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   margin: 90px 90px 0 90px;
 }
 
 .textarea {
-
+    background: #F5F7FB;
+    box-shadow: 0 5px 20px rgba(29, 33, 38, 0.03), 0 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
+    border: none;
+    width: 1250px;
+    padding: 15px;
+    outline: none;
+    resize: none;
 }
+/*!*Приложение SPA - это одна страница, которая постоянно *!*/
+/*!*взаимодействует с пользователем, динамически изменяя текущую страничку, *!*/
+/*!*                    не загружая при этом целые новые страницы с сервера
+                        как это могло быть с обычным сайтом *!*/
+            /*то есть*/
+/*когда пользователь открывает страницу, браузер загружает сразу весь код приложения.*/
+/*Но показывает только определенную часть сайта, которая нужна сейчас пользователю. */
+/*А Когда пользователь переходит в другую часть приложения, браузер берёт уже загруженные*/
+/*данные и отображает их. Получается он динамически подгружает с сервера нужный контент */
+/*без перезагрузки страницы.*/
+
 
 .button {
+    width: 120px;
+    height: 40px;
+    background: #0066CC;
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-size: 19px;
+    border: #0066CC;
+    transition: all .5s ease-in-out;
 
 }
 
 .button:hover {
-
+    background: rgba(0, 102, 204, 0.7);
+    color: rgba(255, 255, 255, 0.9);
+    transition: all .5s ease-in-out;
 }
+
 .button:active {
 
 }
