--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,17 +1,34 @@
 .message {
-
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-right: 90px;
+    margin-bottom: 30px;
 }
 
 .imageAndText {
-
+    display: flex;
+    align-items: end;
 }
 
 .imageAndText img {
+    width: 55px;
+    height: 55px;
+    border-radius: 50px;
+    margin-left: 10px;
+    order: 2;
 
 }
 
 .text {
-
+    display: flex;
+    flex-direction: column;
+    background: #0066CC;
+    padding: 10px;
+    border-radius: 10px;
+    color: #FFFFFF;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1);
+    order: 1;
 }
 
 .text:after {
@@ -19,13 +36,21 @@
 }
 
 .name {
-
+    font-size: 19px;
+    font-weight: bolder;
+    align-self: end;
+    padding-bottom: 5px;
 }
 
 .messageText {
+    font-size: 16px;
+    font-weight: 400;
 
 }
 
 .time {
+    font-size: 10px;
+    align-self: end;
+    padding: 5px 15px 0 0;
 
 }
