--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -5,15 +5,18 @@
 }
 
 .error {
+    color: red;
 }
 
 .input {
 }
 
 .input:focus {
+
 }
 
-.errorInput {
+.errorInput{
+    border: 1px solid red;
 }
 
 .button {
