--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,7 +1,12 @@
 .burgerMenuIcon {
+
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 5px 5px 5px 0 rgba(0,0,0,0.3);
+    padding: 10px 30px;
 }
 
 .header h1 {
