--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -3,8 +3,11 @@
 }
 
 .span {
+    display: inline-block;
+    height: 23px;
     color: cornflowerblue;
     font-size: larger;
+    cursor: pointer;
 }
 
 .input {
