--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -2,7 +2,14 @@
 }
 
 .wrapper {
+    display: flex;
+
+
+
 }
 
 .number {
+    font-weight: bolder;
+    font-size: larger;
+    margin-left: 20px;
 }
