--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -2,21 +2,39 @@
 }
 
 .responseContainer {
+    display: flex;
+
+    justify-content: space-around;
 }
 
 .imageContainer {
+    margin-top: 30px;
 }
 
 .image {
 }
 
-.textContainer{
+.textContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 
 .code {
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: bolder;
 }
 
 .text {
+    margin-bottom: 5px;
+    font-size: 15px;
+    font-weight: bolder;
 }
+
 .info {
+    margin-bottom: 5px;
+    font-size: 15px;
+    font-weight: bolder;
 }
