--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,15 @@
 .pagination {
     display: flex;
+    justify-content: start;
+    align-items: center;
+
 }
 
 .text1 {
+padding: 0 10px;
 
 }
 
 .text2 {
-
+    padding: 0 10px;
 }
